# data-agent-doctor

./: .data-agent-doctor.json  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  rule_request.yml
.github/workflows/: ci.yml
docs/: rule-template.py  writing-rules.md
examples/healthy-data-agent/: README.md  pyproject.toml
examples/healthy-data-agent/pipelines/: rag_ingest.py  support_agent.py
examples/risky-data-agent/: README.md  pyproject.toml
examples/risky-data-agent/agents/: rag_ingest.py  settings.py  sql_agent.py
examples/risky-data-agent/airflow/: support_agent_dag.py
src/data_agent_doctor/: __init__.py  __main__.py  cli.py  context.py  models.py  scanner.py
src/data_agent_doctor/reporters/: console.py
src/data_agent_doctor/rules/: __init__.py  agent_sql_guardrails.py  cost_budget.py  data_quality_gate.py  framework_metadata.py  helpers.py  lineage_audit.py  notebook_hygiene.py  pii_vector_hygiene.py  retry_fallback.py  secret_hygiene.py  tests_present.py
tests/: test_scanner.py
