[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "data-agent-doctor"
version = "0.1.0"
description = "Production-readiness scanner for AI agents that touch data systems."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Ravi Kiran Pagidi" }
]
keywords = [
  "ai-agents",
  "data-engineering",
  "genai",
  "rag",
  "mlops",
  "observability",
  "data-quality",
  "security",
  "cli"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Security",
  "Topic :: System :: Monitoring"
]
dependencies = []

[project.urls]
Homepage = "https://github.com/ravikiranpagidi/data-agent-doctor"
Repository = "https://github.com/ravikiranpagidi/data-agent-doctor"
Issues = "https://github.com/ravikiranpagidi/data-agent-doctor/issues"

[project.scripts]
data-agent-doctor = "data_agent_doctor.cli:main"
dad = "data_agent_doctor.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

